# deltachat-core

./: .gitignore  .travis.yml  CHANGELOG.md  FAQ.md  LICENSE  README.md  build_all_with_docker.sh  deltachat-core.cbp  doxygen.config  meson.build  meson_options.txt  messenger-backend.cbp
.circleci/: config.yml
.credentials/: delta.id_rsa.enc
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.scripts/: Dockerfile  build_libetpan.sh  build_ninja.sh  build_openssl.sh  build_rpgp.sh  build_rust.sh  build_zlib.sh  buildwheel.sh  deploy.sh  make_docker.sh  pseudo_travis.sh  run-tests.sh  run_all.sh  run_core.sh  run_tests.sh  sleep.sh  ssh_delta_rsa.enc  travisbuild.sh
ci_scripts/: README.md  ci_run.sh  ci_upload.sh  config.yml  run_all.sh
ci_scripts/docker-coredeps/: Dockerfile
ci_scripts/docker-doxygen/: Dockerfile
cmdline/: cmdline.c  cmdline.h  main.c  stress.c  stress.h
deltachat/: meson.build
docs/: Doxyfile  README.md  doxygen.config  release-checklist.md  update.sh
docs/html/: annotated.html  classes.html  classmrarray__t-members.html  classmrarray__t.html  classmrchat__t-members.html  classmrchat__t.html  classmrchatlist__t-members.html  classmrchatlist__t.html  classmrcontact__t-members.html  classmrcontact__t.html  classmrlot__t-members.html  classmrlot__t.html  classmrmailbox__t-members.html  classmrmailbox__t.html  classmrmsg__t-members.html  classmrmsg__t.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  index.html  mraheader_8h_source.html  mrapeerstate_8h_source.html  mrarray-private_8h_source.html  mrarray_8h_source.html  mrchat-private_8h_source.html  mrchat_8h_source.html  mrchatlist-private_8h_source.html  mrchatlist_8h_source.html  mrcontact-private_8h_source.html  mrcontact_8h_source.html  mrdehtml_8h_source.html  mrevent_8h.html  mrevent_8h_source.html  mrhash_8h_source.html  (+42 more)
docs/html/search/: all_0.js  all_1.js  classes_0.js  defines_0.js  functions_0.js  searchdata.js  typedefs_0.js  variables_0.js
docs/user/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  index.html  mraheader_8c_source.html  mraheader_8h_source.html  mrapeerstate_8c_source.html  mrapeerstate_8h_source.html  mrchat_8c_source.html  mrchat_8h_source.html  mrchatlist_8c_source.html  mrchatlist_8h_source.html  mrcontact_8c_source.html  mrcontact_8h_source.html  mrdehtml_8c_source.html  mrdehtml_8h_source.html  mrimap_8c_source.html  mrimap_8h_source.html  mrjob_8c_source.html  mrjob_8h_source.html  mrkey_8c_source.html  mrkey_8h_source.html  mrkeyring_8c_source.html  mrkeyring_8h_source.html  mrloginparam_8c_source.html  mrloginparam_8h_source.html  mrmailbox_8c_source.html  mrmailbox_8h_source.html  mrmailbox__configure_8c_source.html  (+45 more)
libs/: update-botan.sh  update-json-c.sh  update-libetpan.sh  update-rnp.sh
libs/cyrussasl/: meson.build
libs/json-c/: config.h  json_config.h
libs/libetpan/: meson.build
libs/netpgp/: bufgap.c  compress.c  config-netpgp.h  create-netpgp.h  create.c  crypto-netpgp.h  crypto.c  keyring-netpgp.h  keyring.c  memory-netpgp.h  meson.build  meson_options.txt  misc.c  mj.c  netpgp-extra.h  netpgp.c  netpgpdefs.h  netpgpsdk.h  openssl_crypto.c  packet-netpgp.h  packet-parse.c  packet-parse.h  packet-print.c  packet-show.c  packet-show.h  packet.h  reader.c  readerwriter-netpgp.h  signature-netpgp.h  signature.c  ssh2pgp.c  ssh2pgp.h  symmetric.c  types.h  validate.c  writer-netpgp.h  writer.c
libs/netpgp/include/: netpgp-extra.h  netpgp.h
libs/netpgp/include/netpgp/: config-pep.h  create.h  crypto.h  keyring.h  signature.h  validate.h  version.h
libs/netpgp/src/: compress.c  create.c  crypto.c  keyring.c  misc.c  netpgp.c  openssl_crypto.c  packet-parse.c  packet-show.c  reader.c  signature.c  symmetric.c  validate.c  writer.c
libs/netpgp/src/lib/: config.h  packet-show.c
libs/openssl/: meson.build
libs/rnp/: LICENSE-OCB.md  LICENSE.md
libs/rnp/src/lib/: CMakeLists.txt  config.h  config.h.in  crypto.cpp  crypto.h  defaults.h  defs.h  fingerprint.cpp  fingerprint.h  generate-key.cpp  key-provider.cpp  key-provider.h  librnp.3  list.cpp  list.h  memory.h  misc.cpp  packet-create.cpp  packet-create.h  pass-provider.cpp  pass-provider.h  pgp-key.cpp  pgp-key.h  rnp.cpp  rnp2.cpp  types.h  utils.h  version.h  version.h.in
libs/rnp/src/lib/crypto/: bn.cpp  bn.h  common.h  dsa.cpp  dsa.h  ec.cpp  ec.h  ecdh.cpp  ecdh.h  ecdsa.cpp  ecdsa.h  eddsa.cpp  eddsa.h  elgamal.cpp  elgamal.h  hash.cpp  hash.h  mpi.cpp  mpi.h  rng.cpp  rng.h  rsa.cpp  rsa.h  s2k.cpp  s2k.h  signatures.cpp  signatures.h  sm2.cpp  sm2.h  symmetric.cpp  symmetric.h
python/: CHANGELOG  MANIFEST.in  Pipfile  README.rst  conftest.py  liveconfig-travis.enc  liveconfig-travis3.enc  liveconfig.txt  setup.cfg  setup.py  tox.ini  travis-liveconfig.enc
python/doc/: Makefile  api.rst  capi.rst  conf.py  examples.rst  getting-started.rst  index.rst  install.rst  lapi.rst
python/tests/: conftest.py  test_account.py  test_increation.py  test_lowlevel.py
python/wheelbuilder/: Dockerfile  build-wheels.sh
scripts/: Dockerfile  Dockerfile-doxygen  build_all_with_docker.sh  build_python.sh  circle-config.yml  deploy.sh  doxygen.sh  pseudo_travis.sh  run_all.sh  travisbuild.sh
scripts/lib/: build_rpgp.sh
src/: dc_aheader.c  dc_aheader.h  dc_apeerstate.c  dc_apeerstate.h  dc_array.c  dc_array.h  dc_chat.c  dc_chat.h  dc_chatlist.c  dc_chatlist.h  dc_configure.c  dc_constants.c  dc_contact.c  dc_contact.h  dc_context.c  dc_context.h  dc_dehtml.c  dc_dehtml.h  dc_e2ee.c  dc_error.h  dc_event.h  dc_hash.c  dc_hash.h  dc_imap.c  dc_imap.h  dc_imex.c  dc_job.c  dc_job.h  dc_jobthread.c  dc_jobthread.h  dc_jsmn.c  dc_jsmn.h  dc_key.c  dc_key.h  dc_keyhistory.c  dc_keyring.c  dc_keyring.h  dc_location.c  dc_log.c  dc_loginparam.c  (+175 more)
test/: dc_prefix_detection_test.c  run_all_unit_tests.sh
(+74 files in other folders)
